polyglot-core/src/test/resources/grammars/positive/test-cstnames.polyglot
Package org.anarres.polyglot.test.cstnames ;

Tokens

	tok_a = 'a' ;
	tok_b = 'b' ;

Productions

	program { -> } =
		tok_a |
		tok_b ;

Abstract Syntax Tree

	program = ;

